services/apps/jona-test/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jona-test-nginx
  namespace: jona-test
  labels:
    app: jona-test-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jona-test-nginx
  template:
    metadata:
      labels:
        app: jona-test-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
