services/apps/jona-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jona-test-nginx
  namespace: jona-test
spec:
  selector:
    app: jona-test-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
