services/apps/jona-test/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jona-test-gateway
  namespace: jona-test
  annotations:
    cert-manager.io/issuer: letsencrypt-jona-test
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/name: "gateway-jona-test"
      load-balancer.hetzner.cloud/location: "nbg1"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
  listeners:
    ## jona-test
    - name: https
      hostname: jona-test.cloudijs.nl
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: jona-test-tls
            kind: Secret
            group: ""
    - name: http
      hostname: jona-test.cloudijs.nl
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    ## jona-2
    - name: https-jona-2
      hostname: jona-2.cloudijs.nl
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: jona-2-tls
            kind: Secret
            group: ""
    - name: http-jona-2
      hostname: jona-2.cloudijs.nl
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
