services/apps/jona-test/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jona-test-app
  namespace: jona-test
spec:
  hostnames:
    - jona-test.cloudijs.nl
  parentRefs:
    - name: jona-test-gateway
      namespace: jona-test
  rules:
    - backendRefs:
        - name: jona-test-nginx
          port: 80
